//
//  AccessibilityIdentifiers.swift
//  Restaurants
//
//  Created by Alok Sinha on 2022-07-01.
//

import Foundation

enum AccessibilityIdentifiers {
    static let sortOptions = "sortOptions"
    static let tableView = "tableView"
}
